--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,43 @@
     padding: 2rem;
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(autofit, minmax(240px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-template-columns: repeat(2, 300px);
     color: white;
 }
 
 .header{
-    display:grid;
-    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)) ;
+    grid-gap: 1rem;
+    align-items: center;
+    padding: 2rem;
+    margin: auto;
+}
+.header .gallery img{
+    width: 100%;
+    max-width: 500px;
+
+}
+
+.header .gallery figure{
+    position: relative;
+    padding: 0;
+    margin: 0;
+
+}
+.header figcaption{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background-color: red;
+}
+
+.gallery{
+    text-align: center;
+    border: solid;
+    max-width: 500px;;
+
+
 }
